--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
+    <link href="/index.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <div class="app-icon"></div>
-      <div class="app-title">Mindpet</div>
-      <a href="#">Download</a>
-    </header>
     <main>
-      <h1>Gaming world for self-care</h1>
-      <p>
-        Mindpet is a multiplayer self-care expirience helping to feel better and
-        discovering healthy habits. Join the community and make new friends.
-      </p>
+      <section class="intro">
+        <header>
+          <div class="app-icon"><img src="/images/app_icon.svg" /></div>
+          <div class="app-title">Mindpet</div>
+          <a class="button" href="#">Download</a>
+        </header>
+        <div class="image"><img src="/images/pic_1.webp" /></div>
+        <h1>Gaming world for self-care</h1>
+        <a href="#" class="button">Download</a>
+        <p>
+          Mindpet is a multiplayer self-care expirience helping to feel better
+          and discovering healthy habits. Join the community and make new
+          friends.
+        </p>
+      </section>
     </main>
   </body>
 </html>
