--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
+    <title>Mindpet</title>
     <link href="/index.css" rel="stylesheet" />
   </head>
   <body>
@@ -17,12 +18,31 @@
         </header>
         <div class="image"><img src="/images/pic_1.webp" /></div>
         <h1>Gaming world for self-care</h1>
-        <a href="#" class="button">Download</a>
-        <p>
-          Mindpet is a multiplayer self-care expirience helping to feel better
-          and discovering healthy habits. Join the community and make new
-          friends.
-        </p>
+        <div class="intro-wrapper-mobile">
+          <a href="#" class="button">Download</a>
+          <p>
+            Mindpet is a multiplayer self-care expirience helping to feel better
+            and discovering healthy habits. Join the community and make new
+            friends.
+          </p>
+          <a href="#" class="caps">EULA</a>
+        </div>
+      </section>
+      <section>
+        <div class="image"><img src="/images/pic_2.webp" /></div>
+        <h2 class="orange">
+          Meet and customize your personal self-care companion
+        </h2>
+      </section>
+      <section>
+        <div class="image"><img src="/images/pic_3.webp" /></div>
+        <h2>
+          Join a safe community for meditation, focus on relaxation events
+        </h2>
+      </section>
+      <section>
+        <div class="image"><img src="/images/pic_4.webp" /></div>
+        <h2>Build your Mindpet world and invite your friends</h2>
       </section>
     </main>
   </body>
