--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
           <a class="button" href="#">Download</a>
         </header>
         <div class="image"><img src="/images/pic_1.webp" /></div>
-        <h1>Gaming world for self-care</h1>
+        <h1>
+          Gaming world<br />
+          for self-care
+        </h1>
         <div class="intro-wrapper-mobile">
           <a href="#" class="button">Download</a>
           <p>
@@ -28,21 +31,31 @@
           <a href="#" class="caps">EULA</a>
         </div>
       </section>
-      <section>
-        <div class="image"><img src="/images/pic_2.webp" /></div>
-        <h2 class="orange">
-          Meet and customize your personal self-care companion
-        </h2>
+      <section class="section-2">
+        <div class="wrapper">
+          <div class="image"><img src="/images/pic_2.webp" /></div>
+          <h2 class="orange">
+            Meet and customize your personal self-care companion
+          </h2>
+        </div>
+      </section>
+      <section class="section-3">
+        <div class="wrapper">
+          <div class="image"><img src="/images/pic_3.webp" /></div>
+          <h2>
+            Join a safe community for meditation, focus on relaxation events
+          </h2>
+        </div>
       </section>
       <section>
-        <div class="image"><img src="/images/pic_3.webp" /></div>
-        <h2>
-          Join a safe community for meditation, focus on relaxation events
-        </h2>
-      </section>
-      <section>
-        <div class="image"><img src="/images/pic_4.webp" /></div>
-        <h2>Build your Mindpet world and invite your friends</h2>
+        <div class="wrapper">
+          <picture class="image">
+            <source srcset="/images/pic_4.webp" type="image/webp" />
+            <source srcset="/images/pic_4.png" type="image/jpeg" />
+            <img src="/images/pic_4.webp" />
+          </picture>
+          <h2>Build your Mindpet world and invite your friends</h2>
+        </div>
       </section>
     </main>
   </body>
