--- a/index.html
+++ b/index.html
@@ -47,12 +47,17 @@
           </h2>
         </div>
       </section>
-      <section>
+      <section class="section-4">
         <div class="wrapper">
-          <picture class="image">
+          <picture class="image mobile">
             <source srcset="/images/pic_4.webp" type="image/webp" />
             <source srcset="/images/pic_4.png" type="image/jpeg" />
             <img src="/images/pic_4.webp" />
+          </picture>
+          <picture class="image desktop">
+            <source srcset="/images/pic_4_desktop.webp" type="image/webp" />
+            <source srcset="/images/pic_4_desktop.png" type="image/jpeg" />
+            <img src="/images/pic_4_desktop.webp" />
           </picture>
           <h2>Build your Mindpet world and invite your friends</h2>
         </div>
