--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
           <div class="app-title">Mindpet</div>
           <a class="button" href="#">Download</a>
         </header>
-        <div class="image"><img src="/images/pic_1.webp" /></div>
+        <picture class="image">
+          <source srcset="/images/pic_1.webp" type="image/webp" />
+          <source srcset="/images/pic_1.png" type="image/jpeg" />
+          <img src="/images/pic_1.webp" />
+        </picture>
         <h1>
           Gaming world<br />
           for self-care
@@ -33,7 +37,11 @@
       </section>
       <section class="section-2">
         <div class="wrapper">
-          <div class="image"><img src="/images/pic_2.webp" /></div>
+          <picture class="image">
+            <source srcset="/images/pic_2.webp" type="image/webp" />
+            <source srcset="/images/pic_2.png" type="image/jpeg" />
+            <img src="/images/pic_2.webp" />
+          </picture>
           <h2 class="orange">
             Meet and customize your personal self-care companion
           </h2>
@@ -41,7 +49,11 @@
       </section>
       <section class="section-3">
         <div class="wrapper">
-          <div class="image"><img src="/images/pic_3.webp" /></div>
+          <picture class="image">
+            <source srcset="/images/pic_3.webp" type="image/webp" />
+            <source srcset="/images/pic_3.png" type="image/jpeg" />
+            <img src="/images/pic_3.webp" />
+          </picture>
           <h2>
             Join a safe community for meditation, focus on relaxation events
           </h2>
@@ -62,6 +74,15 @@
           <h2>Build your Mindpet world and invite your friends</h2>
         </div>
       </section>
+      <section class="section-5">
+        <h2>Create Mindpet with us</h2>
+        <p>
+          If you’re a content creator, mental health expert, 3d designer,
+          developer, game designer, or you’re doing something else that could
+          help build Mindpet universe, please send us an email at team@mind.pet
+        </p>
+      </section>
     </main>
+    <footer></footer>
   </body>
 </html>
