--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
         </p>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a class="button" href="#">Download</a>
+      <nav>
+        <a class="caps" href="#">Terms of service</a
+        ><a class="caps" href="#">Privacy policy</a>
+      </nav>
+      <div>
+        <a href="#"><img src="/images/discord.png" /></a
+        ><a href="#"><img src="/images/twitter.png" /></a>
+      </div>
+    </footer>
   </body>
 </html>
