--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Gaming world<br />
           for self-care
         </h1>
-        <div class="intro-wrapper-mobile">
+        <div class="wrapper-mobile">
           <a href="#" class="button">Download</a>
           <p>
             Mindpet is a multiplayer self-care expirience helping to feel better
@@ -33,6 +33,18 @@
             friends.
           </p>
           <a href="#" class="caps">EULA</a>
+        </div>
+        <div class="wrapper-desktop">
+          <p>
+            Mindpet is a multiplayer self-care expirience helping to feel better
+            and discovering healthy habits. Join the community and make new
+            friends.
+          </p>
+          <div>
+            <div class="qr"><img src="/images/qr.png" /></div>
+            <a href="#" class="button">Download</a>
+            <a href="#" class="caps">EULA</a>
+          </div>
         </div>
       </section>
       <section class="section-2">
@@ -75,12 +87,15 @@
         </div>
       </section>
       <section class="section-5">
-        <h2>Create Mindpet with us</h2>
-        <p>
-          If you’re a content creator, mental health expert, 3d designer,
-          developer, game designer, or you’re doing something else that could
-          help build Mindpet universe, please send us an email at team@mind.pet
-        </p>
+        <div class="wrapper">
+          <h2>Create Mindpet with us</h2>
+          <p>
+            If you’re a content creator, mental health expert, 3d designer,
+            developer, game designer, or you’re doing something else that could
+            help build Mindpet universe, please send us an email at
+            team@mind.pet
+          </p>
+        </div>
       </section>
     </main>
     <footer>
