--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     />
     <title>Mindpet</title>
     <link href="/index.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="/images/favicon.ico" />
   </head>
   <body>
     <main>
@@ -14,7 +15,7 @@
         <header>
           <div class="app-icon"><img src="/images/app_icon.svg" /></div>
           <div class="app-title">Mindpet</div>
-          <a class="button" href="#">Download</a>
+          <a class="button" href="http://onelink.to/z2pkxg">Download</a>
         </header>
         <picture class="image">
           <source srcset="/images/pic_1.webp" type="image/webp" />
@@ -26,7 +27,7 @@
           for self-care
         </h1>
         <div class="wrapper-mobile">
-          <a href="#" class="button">Download</a>
+          <a href="http://onelink.to/z2pkxg" class="button">Download</a>
           <p>
             Mindpet is a multiplayer self-care expirience helping to feel better
             and discovering healthy habits. Join the community and make new
@@ -42,7 +43,7 @@
           </p>
           <div>
             <div class="qr"><img src="/images/qr.png" /></div>
-            <a href="#" class="button">Download</a>
+            <a href="http://onelink.to/z2pkxg" class="button">Download</a>
             <a href="#" class="caps">EULA</a>
           </div>
         </div>
@@ -99,14 +100,17 @@
       </section>
     </main>
     <footer>
-      <a class="button" href="#">Download</a>
+      <a class="button" href="http://onelink.to/z2pkxg">Download</a>
       <nav>
-        <a class="caps" href="#">Terms of service</a
+        <a class="caps" href="/terms_of_use.pdf">Terms of service</a
         ><a class="caps" href="#">Privacy policy</a>
       </nav>
       <div>
-        <a href="#"><img src="/images/discord.png" /></a
-        ><a href="#"><img src="/images/twitter.png" /></a>
+        <a href="https://discord.gg/QNQMy8WD"
+          ><img src="/images/discord.png" /></a
+        ><a href="https://twitter.com/mindpetapp"
+          ><img src="/images/twitter.png"
+        /></a>
       </div>
     </footer>
   </body>
