--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>Mindpet</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="mind.pet" />
+    <meta property="og:locale" content="en" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@mindpetapp" />
     <link href="/index.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/images/favicon.ico" />
   </head>
@@ -68,7 +73,10 @@
             <img src="/images/pic_3.webp" />
           </picture>
           <h2>
-            Join a safe community for meditation, focus on relaxation events
+            Join a safe community for meditation, focus on relaxation events<a
+              href="https://discord.gg/QNQMy8WD"
+              ><img src="/images/discord.png"
+            /></a>
           </h2>
         </div>
       </section>
