--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     <meta property="og:locale" content="en" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@mindpetapp" />
+    <meta
+      name="description"
+      content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community."
+    />
+    <meta property="og:title" content="mind.pet" />
+    <meta property="og:url" content="https://mind.pet/" />
+    <meta property="og:image" content="/images/og.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:description"
+      content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community."
+    />
+    <meta name="twitter:title" content="mind.pet" />
+    <meta name="twitter:url" content="https://mind.pet/" />
+    <meta name="twitter:image" content="/images/og.png" />
+    <meta name="twitter:image:width" content="1200" />
+    <meta name="twitter:image:height" content="630" />
+    <meta
+      name="twitter:description"
+      content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community."
+    />
+    <link rel="image_src" href="/images/og.png" />
+    <link rel="canonical" href="https://mind.pet/" />
     <link href="/index.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/images/favicon.ico" />
   </head>
