--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
           <div class="app-title">Mindpet</div>
           <a class="button" href="http://onelink.to/z2pkxg">Download</a>
         </header>
-        <picture class="image">
-          <source srcset="/images/pic_1.webp" type="image/webp" />
-          <source srcset="/images/pic_1.png" type="image/jpeg" />
-          <img src="/images/pic_1.webp" />
-        </picture>
+        <div class="image">
+          <picture>
+            <source srcset="/images/pic_1.webp" type="image/webp" />
+            <source srcset="/images/pic_1.png" type="image/jpeg" />
+            <img src="/images/pic_1.webp" />
+          </picture>
+        </div>
         <h1>
           Gaming world<br />
           for self-care
