Add privacy policy

--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
     <footer>
       <a class="button" href="http://onelink.to/z2pkxg">Download</a>
       <nav>
-        <a class="caps" href="/terms_of_use.pdf">Terms of service</a
-        ><a class="caps" href="#">Privacy policy</a>
+        <a class="caps" href="/terms_of_use.pdf">Terms of service</a>
+        <a class="caps" href="/privacy_policy.html">Privacy policy</a>
+        <a class="caps" href="/feedback.html">Feedback</a>
       </nav>
       <div>
         <a href="https://discord.gg/QNQMy8WD"
