Add QR code and store urls

--- a/index.html
+++ b/index.html
@@ -1,152 +1,169 @@
 <html lang="en">
-  <head>
-    <meta name="referrer" content="origin" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
-    <title>Mindpet</title>
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="mind.pet" />
-    <meta property="og:locale" content="en" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@mindpetapp" />
-    <meta
-      name="description"
-      content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community."
-    />
-    <meta property="og:title" content="mind.pet" />
-    <meta property="og:url" content="https://mind.pet/" />
-    <meta property="og:image" content="/images/og.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta
-      property="og:description"
-      content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community."
-    />
-    <meta name="twitter:title" content="mind.pet" />
-    <meta name="twitter:url" content="https://mind.pet/" />
-    <meta name="twitter:image" content="/images/og.png" />
-    <meta name="twitter:image:width" content="1200" />
-    <meta name="twitter:image:height" content="630" />
-    <meta
-      name="twitter:description"
-      content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community."
-    />
-    <link rel="image_src" href="/images/og.png" />
-    <link rel="canonical" href="https://mind.pet/" />
-    <link href="/index.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="/images/favicon.ico" />
-  </head>
-  <body>
-    <main>
-      <section class="intro">
-        <header>
-          <div class="app-icon"><img src="/images/app_icon.svg" /></div>
-          <div class="app-title">Mindpet</div>
-          <a class="button" href="http://onelink.to/z2pkxg">Download</a>
-        </header>
-        <div class="image">
-          <picture>
-            <source srcset="/images/pic_1.webp" type="image/webp" />
-            <source srcset="/images/pic_1.png" type="image/jpeg" />
-            <img src="/images/pic_1.webp" />
-          </picture>
-        </div>
-        <h1>
-          Gaming world<br />
-          for self-care
-        </h1>
-        <div class="wrapper-mobile">
-          <a href="http://onelink.to/z2pkxg" class="button">Download</a>
-          <p>
-            Mindpet is a multiplayer self-care expirience helping to feel better
-            and discovering healthy habits. Join the community and make new
-            friends.
-          </p>
-          <a href="#" class="caps">EULA</a>
-        </div>
-        <div class="wrapper-desktop">
-          <p>
-            Mindpet is a multiplayer self-care expirience helping to feel better
-            and discovering healthy habits. Join the community and make new
-            friends.
-          </p>
-          <div>
-            <div class="qr"><img src="/images/qr.png" /></div>
-            <a href="http://onelink.to/z2pkxg" class="button">Download</a>
-            <a href="#" class="caps">EULA</a>
-          </div>
-        </div>
-      </section>
-      <section class="section-2">
-        <div class="wrapper">
-          <picture class="image">
-            <source srcset="/images/pic_2.webp" type="image/webp" />
-            <source srcset="/images/pic_2.png" type="image/jpeg" />
-            <img src="/images/pic_2.webp" />
-          </picture>
-          <h2 class="orange">
-            Meet and customize your personal self-care companion
-          </h2>
-        </div>
-      </section>
-      <section class="section-3">
-        <div class="wrapper">
-          <picture class="image">
-            <source srcset="/images/pic_3.webp" type="image/webp" />
-            <source srcset="/images/pic_3.png" type="image/jpeg" />
-            <img src="/images/pic_3.webp" />
-          </picture>
-          <h2>
-            Join a safe community for meditation, focus on relaxation events<a
-              href="https://discord.gg/QNQMy8WD"
-              ><img src="/images/discord.png"
-            /></a>
-          </h2>
-        </div>
-      </section>
-      <section class="section-4">
-        <div class="wrapper">
-          <picture class="image mobile">
-            <source srcset="/images/pic_4.webp" type="image/webp" />
-            <source srcset="/images/pic_4.png" type="image/jpeg" />
-            <img src="/images/pic_4.webp" />
-          </picture>
-          <picture class="image desktop">
-            <source srcset="/images/pic_4_desktop.webp" type="image/webp" />
-            <source srcset="/images/pic_4_desktop.png" type="image/jpeg" />
-            <img src="/images/pic_4_desktop.webp" />
-          </picture>
-          <h2>Build your Mindpet world and invite your friends</h2>
-        </div>
-      </section>
-      <section class="section-5">
-        <div class="wrapper">
-          <h2>Create Mindpet with us</h2>
-          <p>
-            If you’re a content creator, mental health expert, 3d designer,
-            developer, game designer, or you’re doing something else that could
-            help build Mindpet universe, please send us an email at
-            team@mind.pet
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <a class="button" href="http://onelink.to/z2pkxg">Download</a>
-      <nav>
-        <a class="caps" href="/terms_of_use.pdf">Terms of service</a>
-        <a class="caps" href="/privacy_policy.html">Privacy policy</a>
-        <a class="caps" href="/feedback.html">Feedback</a>
-      </nav>
-      <div>
-        <a href="https://discord.gg/QNQMy8WD"
-          ><img src="/images/discord.png" /></a
-        ><a href="https://twitter.com/mindpetapp"
-          ><img src="/images/twitter.png"
-        /></a>
+
+<head>
+  <meta name="referrer" content="origin" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <title>Mindpet</title>
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="mind.pet" />
+  <meta property="og:locale" content="en" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@mindpetapp" />
+  <meta name="description"
+    content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community." />
+  <meta property="og:title" content="mind.pet" />
+  <meta property="og:url" content="https://mind.pet/" />
+  <meta property="og:image" content="/images/og.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:description"
+    content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community." />
+  <meta name="twitter:title" content="mind.pet" />
+  <meta name="twitter:url" content="https://mind.pet/" />
+  <meta name="twitter:image" content="/images/og.png" />
+  <meta name="twitter:image:width" content="1200" />
+  <meta name="twitter:image:height" content="630" />
+  <meta name="twitter:description"
+    content="Evidence based mental health through gaming. Mindpet is a gaming world for self-care. Meet your Mindpet and join our community." />
+  <link rel="image_src" href="/images/og.png" />
+  <link rel="canonical" href="https://mind.pet/" />
+  <link href="/index.css" rel="stylesheet" />
+  <link rel="shortcut icon" href="/images/favicon.ico" />
+</head>
+
+<body>
+  <main>
+    <section class="intro">
+      <header>
+        <div class="app-icon"><img src="/images/app_icon.svg" /></div>
+        <div class="app-title">Mindpet</div>
+      </header>
+      <div class="image">
+        <picture>
+          <source srcset="/images/pic_1.webp" type="image/webp" />
+          <source srcset="/images/pic_1.png" type="image/jpeg" />
+          <img src="/images/pic_1.webp" />
+        </picture>
       </div>
-    </footer>
-  </body>
+      <h1>
+        Gaming world<br />
+        for self-care
+      </h1>
+      <div class="wrapper-mobile">
+        <a href="http://onelink.to/z2pkxg" class="button">Download</a>
+        <p>
+          Mindpet is a multiplayer self-care experience helping to feel better
+          and discovering healthy habits. Join the community and make new
+          friends.
+        </p>
+        <a href="#" class="caps">EULA</a>
+      </div>
+
+      <div class="wrapper-desktop">
+
+        <p>
+          Mindpet is a multiplayer self-care experience helping to feel better
+          and discovering healthy habits. Join the community and make new
+          friends.
+        </p>
+
+      </div>
+    </section>
+    <div
+      style="display: flex;          align-content: center;           flex-direction: column;           align-items: center;">
+      <img style="width: 20vh;" src="/images/qr.svg" />
+      <a style="width: 20vh;"
+        href='https://play.google.com/store/apps/details?id=com.Mindpet.mindpetapp&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+        <img alt='Get it on Google Play'
+          src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' />
+      </a>
+      <a style="width: 18vh;" href='https://apps.apple.com/us/app/mindpet/id1504176772'>
+        <img alt='Get it on Google Play'
+          src='https://developer.apple.com/news/images/download-on-the-app-store-badge.png' />
+      </a>
+    </div>
+    <div>
+
+
+    </div>
+
+    <section class="section-2">
+      <div class="wrapper">
+        <picture class="image">
+          <source srcset="/images/pic_2.webp" type="image/webp" />
+          <source srcset="/images/pic_2.png" type="image/jpeg" />
+          <img src="/images/pic_2.webp" />
+        </picture>
+        <h2 class="orange">
+          Meet and customize your personal self-care companion
+        </h2>
+      </div>
+    </section>
+    <section class="section-3">
+      <div class="wrapper">
+        <picture class="image">
+          <source srcset="/images/pic_3.webp" type="image/webp" />
+          <source srcset="/images/pic_3.png" type="image/jpeg" />
+          <img src="/images/pic_3.webp" />
+        </picture>
+        <h2>
+          Join a safe community for meditation, focus on relaxation events<a href="https://discord.gg/QNQMy8WD"><img
+              src="/images/discord.png" /></a>
+        </h2>
+      </div>
+    </section>
+    <section class="section-4">
+      <div class="wrapper">
+        <picture class="image mobile">
+          <source srcset="/images/pic_4.webp" type="image/webp" />
+          <source srcset="/images/pic_4.png" type="image/jpeg" />
+          <img src="/images/pic_4.webp" />
+        </picture>
+        <picture class="image desktop">
+          <source srcset="/images/pic_4_desktop.webp" type="image/webp" />
+          <source srcset="/images/pic_4_desktop.png" type="image/jpeg" />
+          <img src="/images/pic_4_desktop.webp" />
+        </picture>
+        <h2>Build your Mindpet world and invite your friends</h2>
+      </div>
+    </section>
+    <section class="section-5">
+      <div class="wrapper">
+        <h2>Create Mindpet with us</h2>
+        <p>
+          If you’re a content creator, mental health expert, 3d designer,
+          developer, game designer, or you’re doing something else that could
+          help build Mindpet universe, please send us an email at
+          team@mind.pet
+        </p>
+      </div>
+    </section>
+    <div
+    style="display: flex;          align-content: center;           flex-direction: column;           align-items: center;">
+    <img style="width: 20vh;" src="/images/qr.svg" />
+    <a style="width: 20vh;"
+      href='https://play.google.com/store/apps/details?id=com.Mindpet.mindpetapp&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+      <img alt='Get it on Google Play'
+        src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' />
+    </a>
+    <a style="width: 18vh;" href='https://apps.apple.com/us/app/mindpet/id1504176772'>
+      <img alt='Get it on Google Play'
+        src='https://developer.apple.com/news/images/download-on-the-app-store-badge.png' />
+    </a>
+  </div>
+  </main>
+  
+  <footer>
+    <nav>
+      <a class="caps" href="/terms_of_use.pdf">Terms of service</a>
+      <a class="caps" href="/privacy_policy.html">Privacy policy</a>
+      <a class="caps" href="/feedback.html">Feedback</a>
+    </nav>
+    <div>
+      <a href="https://discord.gg/QNQMy8WD"><img src="/images/discord.png" /></a><a
+        href="https://twitter.com/mindpetapp"><img src="/images/twitter.png" /></a>
+    </div>
+  </footer>
+</body>
+
 </html>
