Update discord url

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <img src="/images/pic_3.webp" />
         </picture>
         <h2>
-          Join a safe community for meditation, focus on relaxation events<a href="https://discord.gg/QNQMy8WD"><img
+          Join a safe community for meditation, focus on relaxation events<a href="https://discord.gg/9nKfmkE2"><img
               src="/images/discord.png" /></a>
         </h2>
       </div>
@@ -160,7 +160,7 @@
       <a class="caps" href="/feedback.html">Feedback</a>
     </nav>
     <div>
-      <a href="https://discord.gg/QNQMy8WD"><img src="/images/discord.png" /></a><a
+      <a href="https://discord.gg/9nKfmkE2"><img src="/images/discord.png" /></a><a
         href="https://twitter.com/mindpetapp"><img src="/images/twitter.png" /></a>
     </div>
   </footer>
